base/008-notif/fuse-008-notif-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: notif
  name: notif
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: notif
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: notif
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-notif:development"
          name: notif
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
